erDiagram
    HOSTS ||--o{ AGENTS : "runs (host_id, ON DELETE CASCADE at DB level, but app-level 409 guard blocks host deletion while any non-terminal agent exists — 2026-08-14 5차 개정)"
    PROJECTS |o--o{ AGENTS : "owns (project_id, nullable — 0 = general pool)"
    AGENTS |o--o| WORKERS : "worker_id, Some once Running (self-registers via existing /v1/workers/register)"
    AGENTS ||--o{ AGENT_MEMORY : "accumulates"
    AGENTS ||--o{ AGENT_COMMANDS : "receives (start/stop, heartbeat-piggybacked)"
    TASKS |o--o| AGENTS : "agent_id, nullable — resolves to worker_id at dispatch time"
    TASKS |o--o| THREAD_SUMMARIES : "thread_id (project_id IS NULL 태스크만 해당)"

    AGENT_TEMPLATES |o--o{ AGENTS : "template_id, nullable — instantiation preset"
    AGENT_TEMPLATES ||--o{ AGENT_TEMPLATE_TOOLS : "declares required/optional"
    MCP_SERVERS ||--o{ AGENT_TEMPLATE_TOOLS : "referenced by (ON DELETE RESTRICT — 2026-08-14 4차 개정, was CASCADE)"
    MCP_SERVERS ||--o{ AGENT_TOOLS : "bound to (ON DELETE RESTRICT — 2026-08-14 4차 개정, was CASCADE)"
    AGENTS ||--o{ AGENT_TOOLS : "resolved binding (copied from template at creation, per-agent overridable)"

    AGENTS {
        uuid id PK
        uuid host_id FK
        uuid project_id FK "nullable — derived/inherited from host_id's hosts.project_id (#48 3차 개정, exclusive ownership, not independently set)"
        uuid worker_id FK "nullable — set once the spawned grok process registers"
        uuid template_id FK "nullable — which AgentTemplate this was instantiated from, if any"
        text name
        text custom_prompt "system-prompt prefix, applied at dispatch-time prompt composition (NOT a grok CLI flag) — inherited from template.custom_prompt at creation, overridable"
        text status "Pending | Starting | Running | Stopping | Stopped | Failed"
        text provisioned_by "manual | automatic — 2026-08-14 4차 개정 추가, required for §4.1 idle-teardown eligibility"
        integer idle_timeout_secs "nullable — 2026-08-14 5차 개정 추가, snapshot of project.agent_idle_timeout_secs at creation (avoids zombie agents if the owning project is later deleted)"
        timestamptz created_at
        timestamptz updated_at
    }

    AGENT_TEMPLATES {
        uuid id PK
        text name UK
        text description
        text custom_prompt "default system-prompt for agents created from this template"
        text created_by
        timestamptz created_at
    }

    MCP_SERVERS {
        uuid id PK
        text name UK
        text description
        text transport "stdio | http | sse — verification spike TBD (§5.2)"
        text command "stdio only"
        jsonb args "stdio only"
        text url "http/sse only"
        jsonb env
        text created_by
        timestamptz created_at
    }

    AGENT_TEMPLATE_TOOLS {
        uuid template_id FK
        uuid mcp_server_id FK
        text requirement "required | optional"
    }

    AGENT_TOOLS {
        uuid agent_id FK
        uuid mcp_server_id FK
        text requirement "required | optional — copied from template, per-agent overridable"
    }

    AGENT_MEMORY {
        uuid id PK
        uuid agent_id FK
        text kind "note | summary | fact"
        text content
        uuid source_task_id FK "nullable"
        timestamptz created_at
    }

    AGENT_COMMANDS {
        uuid id PK
        uuid host_id FK
        uuid agent_id FK "agent row is created first (Pending), then this command references it"
        text command_type "start | stop | capture_terminal(#50)"
        text status "pending | acked | done | failed"
        text error
        timestamptz created_at
        timestamptz acked_at
    }

    THREAD_SUMMARIES {
        uuid thread_id PK "tasks.thread_id 값 공유, 별도 FK 아님(thread_id는 PK 엔티티가 아니라 tasks의 그룹핑 컬럼)"
        text summary
        integer turn_count
        timestamptz updated_at
    }

    HOSTS {
        uuid id PK
        text hostname UK
        uuid project_id FK "#48 2026-08-14 3차 개정 — 배타적 소유. 이 host 위의 모든 Agent는 이 project_id를 그대로 상속받는다(§2.3)"
        integer max_agents "신규 — 이 host에 동시 운영 가능한 agent 상한(운영자 설정, 여유 판단 기준)"
    }

    WORKERS {
        uuid id PK
        text name UK
    }

    PROJECTS {
        uuid id PK
        text name UK
        text agent_provisioning_mode "manual | automatic — §4.1"
        uuid default_agent_template_id FK "nullable, automatic 모드 필수, no FK until #49 Phase 1 creates agent_templates"
        integer agent_idle_timeout_secs "nullable — automatic 모드 에이전트 유휴 자동 종료 기준"
        text workdir_template "nullable — 2026-08-14 3/4차 개정 추가, §9 결과물 디렉토리 기본 경로"
    }

    TASKS {
        uuid id PK
        uuid project_id FK "nullable, #48에서 이미 도입"
        uuid agent_id FK "nullable, 신규 — 지정 시 그 agent의 worker_id로 해석돼 디스패치"
        jsonb requested_optional_tools "nullable — 이 태스크에서만 켤 optional mcp_server 이름 배열"
        uuid thread_id "nullable 아님, 013에서 이미 도입"
    }
